[package]
name = "crate_demo_config"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.58"
config = "0.13.2"
futures = "0.3.25"
reqwest = "0.11.12"
tokio = { version = "1.21.2", features = ["rt-multi-thread", "macros", "fs", "io-util", "time"] }
warp = "0.3.3"
